player visibility checked and fixed

--- a/assets/css/player.css
+++ b/assets/css/player.css
@@ -28,4 +28,9 @@
 }
 .sliderRange:hover {
   accent-color: #1db954;
+}
+
+footer,
+.progress {
+  background-color: #000;
 }/*# sourceMappingURL=player.css.map */
